--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -47,40 +47,6 @@
     </div>
 
     <div class="section">
-        <h3>Tidsstämplar</h3>
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>Förnamn</th>
-                    <th>Efternamn</th>
-                    <th>Incheckning</th>
-                    <th>Utcheckning</th>
-                    <th>Arbetad Tid</th>
-                    <th>Rasttid</th>
-                    <th>Lunchtid</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for timestamp in timestamps %}
-                <tr>
-                    <td>{{ timestamp.user.first_name }}</td>
-                    <td>{{ timestamp.user.last_name }}</td>
-                    <td>{{ timestamp.clock_in.strftime('%Y-%m-%d %H:%M') }}</td>
-                    <td>{{ timestamp.clock_out.strftime('%Y-%m-%d %H:%M') if timestamp.clock_out else '' }}</td>
-                    <td>
-                        {% if timestamp.clock_out %}
-                        {{ (timestamp.clock_out - timestamp.clock_in).seconds|format_worked_hours }}
-                        {% endif %}
-                    </td>
-                    <td>{{ timestamp.break_duration }} min</td>
-                    <td>{{ timestamp.lunch_duration }} min</td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-    </div>
-
-    <div class="section">
         <h3>Semesterförfrågningar</h3>
         <table class="table">
             <thead>
@@ -158,5 +124,41 @@
             </tbody>
         </table>
     </div>
+
+    <div class="section">
+        <h3>Alla Tidsstämplar</h3>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Förnamn</th>
+                    <th>Efternamn</th>
+                    <th>Incheckning</th>
+                    <th>Utcheckning</th>
+                    <th>Arbetad Tid</th>
+                    <th>Rasttid</th>
+                    <th>Lunchtid</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for timestamp in timestamps %}
+                <tr>
+                    <td>{{ timestamp.user.first_name }}</td>
+                    <td>{{ timestamp.user.last_name }}</td>
+                    <td>{{ timestamp.clock_in.strftime('%Y-%m-%d %H:%M:%S') }}</td>
+                    <td>{{ timestamp.clock_out.strftime('%Y-%m-%d %H:%M:%S') if timestamp.clock_out else 'Still Clocked
+                        In' }}</td>
+                    <td>
+                        {% if timestamp.clock_out %}
+                        {{ (timestamp.clock_out - timestamp.clock_in).seconds|format_worked_hours }}
+                        {% endif %}
+                    </td>
+                    <td>{{ timestamp.break_duration }} min</td>
+                    <td>{{ timestamp.lunch_duration }} min</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+    </div>
+
 </div>
 {% endblock %}
